crates/no_unwrap_or_else_panic/examples/fail_unwrap_in_hand_written_test_companion.stderr
error: Replace unwrap_or_else on `std::option::Option<i32>` with a non-panicking fallback.
  --> $DIR/fail_unwrap_in_hand_written_test_companion.rs:24:13
   |
LL |     let _ = Some(value).unwrap_or_else(|| panic!("handwritten companion {value}"));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The closure supplied to unwrap_or_else triggers a panic.
  --> $DIR/fail_unwrap_in_hand_written_test_companion.rs:24:13
   |
LL |     let _ = Some(value).unwrap_or_else(|| panic!("handwritten companion {value}"));
   |             ^^^^^^^^^^^
   = help: Propagate the error or use expect with a descriptive message instead of panicking.
   = note: requested on the command line with `-D no-unwrap-or-else-panic`

error: aborting due to 1 previous error

